Update api doc
