# modules/common/router.js
@@ -2,7 +2,7 @@ var handlers = require('./handlers')
 var express = require('express')
 var router = express.Router()
 
-router.route('/cm/s3/upload-params').get(handlers.getUploadParams);
+router.route('/cm/files/upload-params').get(handlers.getUploadParams);
 
 router.route('/cm/files').post(handlers.addFile);
 
